--- a/test/basic.expect.css
+++ b/test/basic.expect.css
@@ -4,4 +4,8 @@ test {
 	width: calc(8em + 20px);
 	width: calc(8ic + 20px);
 	height: 10px;
+	margin: 0.5em 1em .2em;
+	margin: 0.5ic 1ic .2ic;
+	padding: 2em;
+	padding: 2    ic;
 }
